Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-09-15 (SVN):
    * pr_edict.c: added compile time asserts so as to make sure that the
      globalvars structures have correct member offsets.

2012-09-15 (SVN):
    * updated version date stamp to 2012-09-15.

2012-09-15 (SVN):
    * added pakfile information for the ultra-ancient hw 0.09 version

2012-09-15 (SVN):
    * added progs information for the ultra-ancient hw 0.09 version

2012-09-15 (SVN):
    * hw/, siege/world.hc (GetNextMap): reverted r4945 (line 592) change

2012-09-15 (SVN):
    * updated release notes

2012-09-12 (SVN):
    * breakabl.hc, client.hc, doors.hc, subs.hc, weapons.hc, world.hc:
      replaced several while(1){} and do{}while(1) loops by loop{} which
      is shorter. hcc supports this feature, so let's just use it.

2012-09-12 (SVN):
    * hw/, siege/world.hc (GetNextMap): start searching strings.txt at
      line 592 (STR_GOTDEEPFREEZE), not at line 0. that particular line
      is present in hexenworld versions of strings.txt as standart.

2012-09-12 (SVN):
    * weapons.hc (CycleWeaponCommand,CycleWeaponReverseCommand): removed
      an unnecessary local variable and changed the loop into a while(1)
      loop and simplified a bit. made them to return in in an impossible
      case of weapon not being one of IT_WEAPON1..4. changed the portals
      version to use switch statements.

2012-09-12 (SVN):
    * h2/items.hc, portals/items.hc (weapon_touch): IT_WEAPON4 must be
      OR'ed to new items, not added to. fix copied over from hexenworld
      version.

2012-09-12 (SVN):
    * xcode project file: replaced all snd_mpg123 left-overs by snd_mp3.

2012-09-11 (SVN):
    * gamecode,h2/items.hc (weapon_touch): commented out other.oldweapon
      assignment to other.weapon. it was causing weapon switching to get
      stuck if several weapons were picked up too fast. see:
      http://sourceforge.net/projects/uhexen2/forums/forum/425206/topic/5635367